# scrcpy_ios

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/scrcpy_ios/: devicemanager.h  macro_def.h  macro_undef.h  quicktime_protocol.h  screenrecorder.h  usbdevice.h  utils.h
src/: devicemanager.cpp  quicktime_protocol.cpp  screenrecorder.cpp  usbdevice_win.cpp
test/: main.cpp
